[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UserInterface/Item/Item.gd" type="Script" id=1]
[ext_resource path="res://assets/font/letter_gothic12.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.184314, 0.168627, 0.137255, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.309804, 0.25098, 0.0823529, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 20 )

[node name="Item" type="Control"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 50.0
margin_bottom = 50.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureItem" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchItem" type="TouchScreenButton" parent="Panel/TextureItem"]
shape = SubResource( 2 )

[node name="LabelAmount" type="Label" parent="Panel"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -13.0
margin_right = 5.0
custom_fonts/font = ExtResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/TextureItem/TouchItem" to="." method="_on_TouchItem_pressed"]
